<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".MainActivity"
    android:id="@+id/main2"
    >

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textField"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/nombre"
        android:layout_marginHorizontal="20dp"
        android:layout_marginVertical="10dp"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/nombreText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="25sp"
            android:inputType="text"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textField2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/email"
        android:layout_marginHorizontal="20dp"
        android:layout_marginVertical="10dp"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/emailText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="25sp"
            android:inputType="textEmailAddress"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textField3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/contrasena"
        android:layout_marginHorizontal="20dp"
        android:layout_marginVertical="10dp"

        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/contraText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="25sp"
            android:inputType="textWebPassword"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textField4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/confirmar_contrasena"
        android:layout_marginHorizontal="20dp"
        android:layout_marginVertical="10dp"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/confirmContra"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="25sp"
            android:inputType="textWebPassword"
            />

    </com.google.android.material.textfield.TextInputLayout>
    <CheckBox
        android:id="@+id/checkBoxTerminos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:textColor="@android:color/black"
        android:text="Acepto terminos y condiciones" />

    <Button
        android:id="@+id/buttonRegistrar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="30sp"
        android:text="@string/registrar"
        android:layout_marginTop="16dp" />

    <Button
        android:id="@+id/buttonVolver"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="30sp"
        android:text="@string/volver"
        android:layout_marginTop="16dp" />


</LinearLayout>