<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    android:padding="20dp"
    android:id="@+id/main">

    <ImageView
        android:id="@+id/logoImageView"
        android:layout_width="276dp"
        android:layout_height="146dp"
        android:layout_marginTop="32dp"
        android:src="@drawable/ic_logo"
        android:layout_gravity="center_horizontal" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Iniciar sesion"
        android:textSize="30sp"
        android:textColor="@color/black"
        android:layout_marginTop="32dp"
        android:layout_gravity="center_horizontal" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textField"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/email"
        android:layout_marginVertical="10dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/emailText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="25sp"
            android:inputType="textEmailAddress" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textField2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/contrasena"
        android:layout_marginVertical="10dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/contraText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="25sp"
            android:inputType="textWebPassword" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/buttonInicioS"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="23sp"
        android:text="@string/inicioSesion"
        android:layout_marginTop="16dp" />

    <Button
        android:id="@+id/buttonRegistrarse"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="23sp"
        android:text="@string/registrarse"
        android:layout_marginTop="16dp" />

</LinearLayout>
